--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
             <!-- === Simple results === -->
             <div class="d-flex justify-content-center">
                 <div class="" id="display_data">
-                    
                 </div>
             </div>
             <!-- Single Lyrics -->
@@ -157,7 +156,7 @@
                 </pre>
             </div>
             <!-- === Fancy results === -->
-            <div class="search-result col-md-8 mx-auto py-4">
+            <div class="search-result col-md-8 mx-auto py-4" id="display">
                 <!-- single result -->
                 <div class="single-result row align-items-center my-3 p-3">
                     <div class="col-md-9">
