--- a/index.html
+++ b/index.html
@@ -53,7 +53,22 @@
             <!-- === Fancy results === -->
             <div class="search-result col-md-8 mx-auto py-4" id="display_data">
                 <!-- single result -->
+                <!-- <div class="single-result row align-items-center my-3 p-3">
+                    <div class="col-md-9">
+                        <h3 class="lyrics-name">Purple Noon</h3>
+                        <p class="author lead">Album by <span>Washed Out</span></p>
+                        <p class="author lead">Album by <span>Washed Out</span></p>
+                        <audio controls>
+                            <source src="horse.ogg" type="audio/ogg">
+                            <source src="horse.mp3" type="audio/mpeg">
+                            Your browser does not support the audio tag.
+                        </audio>
+                    </div>
+                    <div class="col-md-3 text-md-right text-center">
+                        <button class="btn btn-success">Get Lyrics</button>
+                    </div>
                 </div>
+                </div> -->
             </div>
         </main>
     </div>
